--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>comrades.bmi</groupId>
-  <artifactId>BMI</artifactId>
-  <version>BMI-4.0</version>
-  <packaging>war</packaging>
-  <name>BMI</name>
-  <description>BMI Calculator Application</description>
+  <groupId>comrades.aea</groupId>
+  <artifactId>Calc</artifactId>
+  <version>${BUILD_NUMBER}</version>
+  <packaging>jar</packaging>
+  <name>Calc</name>
+  <description>Calculator application</description>
   <build>
   <plugins>
-  <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
-  </plugin>
-  <plugin>
+	<plugin>
 		<groupId>org.jacoco</groupId>
 		<artifactId>jacoco-maven-plugin</artifactId>
 		<version>0.8.2</version>
@@ -36,21 +29,14 @@
 		</executions>
 	</plugin>
   </plugins>
-  </build>
-   <dependencies>
+ </build>
+  <dependencies>
   <!-- https://mvnrepository.com/artifact/junit/junit -->
   <dependency>
 	<groupId>junit</groupId>
 	<artifactId>junit</artifactId>
 	<version>4.12</version>
 	<scope>test</scope>
-  </dependency>
-   <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-  <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>3.1.0</version>
-    <scope>provided</scope>
   </dependency>
   </dependencies>
 </project>
