--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 	<artifactId>junit</artifactId>
 	<version>4.12</version>
 	<scope>test</scope>
+  <dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.1.0</version>
+    <scope>provided</scope>
   </dependency>
   </dependencies>
 	
