--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
-sonar.projectKey=comrades.aea:Calc
-sonar.projectName=Calc
+sonar.projectKey=BMIBeta
+sonar.projectName=BMIBeta
 sonar.projectVersion=1.0
 sonar.language=java
-sonar.sources=src/main/java/Calc.java
+sonar.sources=src/main/java/BMIServlet.java
 sonar.java.binaries=.
 #sonar.host.url=http://18.224.155.110:9000
